
[package]
name = "ra6m2"
description = "Peripheral access API for RA6M2 microcontrollers (generated using svd2rust)"
version = "0.2.1"
authors = [
    "Nathan Larsen <n8tlarsen@gmail.com>",
    "Addison Heavner <addisonheavner@gmail.com>",
]
keywords = ["no-std", "arm", "cortex-m", "ra4", "ra", "renesas"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ra-rs/ra"
readme = "README.md"
edition = "2021"

[dependencies]
critical-section = { version = "1.1", optional = true }
cortex-m = "0.7"
cortex-m-rt = { version = "0.7.5", optional = true }
vcell = "0.1.3"
portable-atomic = { version = "1.11.0" }

[features]
rt = ["cortex-m-rt/device"]
critical-section = ["dep:critical-section"]
